modified redirect js file

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     <section class="panel panel1">
         <div class="collection">
             <div class="collection-wrap">
-                <a class="collection-link">
+                <a class="collection-link first">
                     <div class="img-span">
                         <img src="img/portrait-img.jpg" class="one">
                     </div>
@@ -171,15 +171,15 @@
     <section class="panel panel2">
         <div class="collection">
             <div class="collection-wrap">
-                <a href="#" class="collection-link">
+                <a class="collection-link second">
                     <div class="img-span">
-                        <img src="img/portrait-img.jpg">
+                        <img src="img/portrait-img.jpg" class="two">
                     </div>
                     <div class="title-wrap">
                         <div class="title-mask"></div>
                         <span>
-                            <div class="project-coming--soon">Coming Soon</div>
-                            <h1 class="titleparallax">LDN</h1>
+                            <!-- <div class="project-coming--soon">Coming Soon</div> -->
+                            <h1 class="titleparallax"><span>L</span><span>D</span><span>N</span></h1>
                             <p class="date">2017</p>
                         </span>
                     </div>
