added link animation file

--- a/index.html
+++ b/index.html
@@ -250,6 +250,7 @@
 <script src="js/scroll.js"></script> 
 
 <!-- <script src="js/collectiontitle.js"></script> -->
+<script src="js/linkanimation.js"></script>
 <script src="js/redirect.js"></script>
 <script src="js/cursor.js"></script>
 <script src="js/menu.js"></script>
