set up js for collection page title animation

--- a/collections/portugal.html
+++ b/collections/portugal.html
@@ -125,7 +125,11 @@
     <section class="testing">
     <section class="collection-title">
         <div class="title-wrap">
-            <div class="parallax-title first" data-depth="0.6">AMS</div>
+            <div class="parallax-title first" data-depth="0.6">
+                <span>
+                    <h1><span>A</span><span>M</span><span>S</span></h1>
+                </span>
+            </div>
         </div>
     </section>
     </section>
@@ -211,7 +215,7 @@
     <script src="../js/loader.js"></script>
     <script src="../js/menu.js"></script>
     <script src="../js/animation.js"></script>
-    <!-- <script src="../js/main.js"></script> -->
+    <script src="../js/collectiontitle.js"></script>
     <script src="../js/transform.js"></script>
     <!-- <script src="../js/collectiontitle.js"></script> -->
 
