added generic  page adjustments

--- a/index.html
+++ b/index.html
@@ -113,19 +113,19 @@
         <div class="menu-container">
             <a href="profile.html">
                 <div class="nav-area--wrap">
-                <div class="nav-item" data-speed="0.1" style="left: 326px; top: 50px;">Profile</div>
+                <div class="nav-item" data-speed="0.1">Profile</div>
                 </div>
             </a>
     
-            <a href="#">
+            <!-- <a href="#">
                 <div class="nav-area--wrap">
                     <div class="nav-item coming-soon" data-speed="0.1" style="left: 326px; top: 50px;">Collections</div>
                 </div>
-            </a>
+            </a> -->
         
             <a href="contact.html">
                 <div class="nav-area--wrap">
-                    <div class="nav-item" data-speed="0.1" style="left: 326px; top: 50px;">Contact</div>
+                    <div class="nav-item" data-speed="0.1">Contact</div>
                 </div>
             </a>
 
