--- a/contact.html
+++ b/contact.html
@@ -129,7 +129,22 @@
                     <div class="dot-2" data-parallax="0.7"></div>
                 <div class="contact-info">
                     <div class="emoji">&#x1F4F8</div>
-                    <p>If you're interested in working or collaborating together say hi! If not, get the hell off my site.</p>
+                    <div class="contact-info--summary highlight">
+                        <div class="info--wrap">
+                            <div class="contact-info--mask"></div>
+                            <p>If you're interested in working or collaborating together say hi! If not, get the hell off my site.</p>
+                        </div>
+                    </div>
+                    <div class="contact-info--summary">
+                        <div class="info--wrap">
+                            <p>If you're interested in working or collaborating together say hi! If not, get the hell off my site.</p>
+                        </div>
+                    </div>
+                    <div class="contact-info--summary">
+                        <div class="info--wrap">
+                            <p>I'm currently based in Amsterdam, NL.</p>
+                        </div>
+                    </div>
                     <div class="contact-page--links">
                         <span><a href="#">Email</a></span>
                         <span><a href="#">Instagram</a></span>
@@ -145,24 +160,17 @@
     <footer class="contactpage-footer">
 
         <div class="logo-wrap">
-            <div class="spinner" data-speed="0.079">
+            <div class="spinner" data-speed="0.005">
                 <img src="img/stay-weird.svg">
             </div>
-            <div class="face" data-speed="0.079">
+            <div class="face" data-speed="0.1">
                 <img src="img/stay-weird-face.svg">
             </div>
         </div>
 
-
-
         <div class="footer-wrap">
-            <div class="social-links">
-                <span><a href="#">EMAIL</a></span>
-                <span><a href="#">INSTAGRAM</a></span>
-                <span><a href="#">VSCO</a></span>
-            </div>
-            <div class="credit">
-                <span><a class="coded-by">Code by</a></span> <span><a href="#">Jason Booth</a></span>
+            <div class="credit alt">
+                <span><a class="coded-by">Code by</a></span> <span><a href="#" class="primary-link">Jason Booth</a></span>
             </div>
         </div>  
     </footer>
