added menu adjustments

--- a/contact.html
+++ b/contact.html
@@ -116,7 +116,7 @@
         </div>
     </div>
 
-    <main data-is-dark="true" class="main-contact">
+    <main class="main-contact">
         <section class="contact-hero"></section>
 
         <section class="contact-title">
@@ -156,6 +156,7 @@
 
     </main>
 
+    <section class="footer-data" data-is-dark="true"></section>
 
     <footer class="contactpage-footer">
 
@@ -180,6 +181,7 @@
 <script src="js/menu.js"></script>
 <script src="js/animation.js"></script>
 <script src="js/logomove.js"></script>
+<!-- <script src="js/data.js"></script> -->
 
 </body>
 
